--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-datepicker": "^3.6.0",
+    "react-dom": "17.0.1",
+    "react-infinite-scroll-component": "^6.0.0",
+    "react-query": "^3.11.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-datepicker": "^3.1.5",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.1.5"
   }
 }
